force-app/main/default/objects/Account/fields/ACQ_Count__c.field-meta.xml
<CustomField>
    <fullName>ACQ_Count__c</fullName>
    <label># ACQ Objectives at Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>