force-app/main/default/objects/Account/fields/ACQ_Rate__c.field-meta.xml
<CustomField>
    <fullName>ACQ_Rate__c</fullName>
    <inlineHelpText>An estimate of the number of ACQ skills per Week for active clients. Calculation: # of ACQ skills / # of Elapsed Weeks</inlineHelpText>
    <label>ACQ/Week Rate (EXPERIMENTAL)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>