force-app/main/default/objects/Account/fields/ACQ_Session_Rate__c.field-meta.xml
<CustomField>
    <fullName>ACQ_Session_Rate__c</fullName>
    <label>ACQ/Session Rate (EXPERIMENTAL)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>