force-app/main/default/objects/Account/fields/Avg_Sessions_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Avg_Sessions_Per_Week__c</fullName>
    <formula>No_Of_Closed_Sessions__c /  Elapsed_Weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg # Sessions / Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>