force-app/main/default/objects/Account/fields/Clinic_Report__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Report__c</fullName>
    <inlineHelpText>This takes you to the SharePoint Folder</inlineHelpText>
    <label>Clinic Report</label>
    <type>Url</type>
</CustomField>