force-app/main/default/objects/Account/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Client is currently receiving services from Abacus</description>
    <inlineHelpText>Client is currently receiving services from Abacus. A client has to be Current to generate fresh weekly statistics..</inlineHelpText>
    <label>Currently Receiving Abacus Services</label>
    <type>Checkbox</type>
</CustomField>