force-app/main/default/objects/Account/fields/Elapsed_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Weeks__c</fullName>
    <label>Elapsed Treatment Weeks</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>