force-app/main/default/objects/Account/fields/First_Session__c.field-meta.xml
<CustomField>
    <fullName>First_Session__c</fullName>
    <label>First Closed Session</label>
    <type>Date</type>
</CustomField>