force-app/main/default/objects/Account/fields/Latest_Closed_Session__c.field-meta.xml
<CustomField>
    <fullName>Latest_Closed_Session__c</fullName>
    <inlineHelpText>The date of the most recent Closed session as at the time of gathering statistics.</inlineHelpText>
    <label>Latest Closed Session</label>
    <type>Date</type>
</CustomField>