force-app/main/default/objects/Account/fields/maica__ABN__c.field-meta.xml
<CustomField>
    <fullName>maica__ABN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>(DEPRECATED) ABN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>