force-app/main/default/objects/Account/fields/maica__ABN_Exemption__c.field-meta.xml
<CustomField>
    <fullName>maica__ABN_Exemption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if the Provider is exempt from quoting an ABN under ATO rules. If selected, a value of EXCLS will be populated in the Bulk Payment Request File.</description>
    <inlineHelpText>Used to indicate if the Provider is exempt from quoting an ABN under ATO rules.</inlineHelpText>
    <label>ABN Exemption</label>
    <type>Checkbox</type>
</CustomField>