force-app/main/default/objects/Account/fields/maica__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>maica__Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>