force-app/main/default/objects/Account/fields/maica__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>maica__Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>