force-app/main/default/objects/Account/fields/maica__Australian_Business_Number_ABN__c.field-meta.xml
<CustomField>
    <fullName>maica__Australian_Business_Number_ABN__c</fullName>
    <externalId>true</externalId>
    <label>Australian Business Number (ABN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>