force-app/main/default/objects/Account/fields/maica__BSB__c.field-meta.xml
<CustomField>
    <fullName>maica__BSB__c</fullName>
    <label>BSB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>