force-app/main/default/objects/Account/fields/maica__Provider_Email__c.field-meta.xml
<CustomField>
    <fullName>maica__Provider_Email__c</fullName>
    <description>Address used by Maica for email distribution, such as sending Invoices</description>
    <inlineHelpText>Address used by Maica for email distribution, such as sending Invoices</inlineHelpText>
    <label>Provider Email</label>
    <type>Email</type>
</CustomField>