force-app/main/default/objects/Account/fields/No_Of_ACQ_Objectives__c.field-meta.xml
<CustomField>
    <fullName>No_Of_ACQ_Objectives__c</fullName>
    <label># ACQ Objectives - Current</label>
    <summaryFilterItems>
        <field>Client_Objective__c.Status__c</field>
        <operation>equals</operation>
        <value>ACQ</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_Objective__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>