force-app/main/default/objects/Account/fields/No_Of_Active_BoC__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Active_BoC__c</fullName>
    <label># Active BoC - Current</label>
    <summaryFilterItems>
        <field>Client_BOC__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Client_BOC__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>