force-app/main/default/objects/Account/fields/No_of_Client_Objectives__c.field-meta.xml
<CustomField>
    <fullName>No_of_Client_Objectives__c</fullName>
    <label># Client Objectives - Current</label>
    <summaryForeignKey>Client_Objective__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>