force-app/main/default/objects/Account/fields/Stats_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Stats_Timestamp__c</fullName>
    <label>Statistics Run Timestamp</label>
    <type>DateTime</type>
</CustomField>