force-app/main/default/objects/Account/fields/Total_Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Session_Duration__c</fullName>
    <inlineHelpText>The sum of all Session hours for Closed sessions as the time of gathering the statistics</inlineHelpText>
    <label>Total Session Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>