force-app/main/default/objects/Account/recordTypes/Carer.recordType-meta.xml
<RecordType>
    <fullName>Carer</fullName>
    <active>true</active>
    <description>Used for providing access to Carer Portal</description>
    <label>Carer</label>
</RecordType>