force-app/main/default/objects/Account/listViews/Carers.listView-meta.xml
<ListView>
    <fullName>Carers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.IS_PARNTER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Carer Master Account</label>
</ListView>