force-app/main/default/objects/Account/listViews/LFL_Clients.listView-meta.xml
<ListView>
    <fullName>LFL_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Current_Age__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Current__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current L4L Clients</label>
</ListView>